--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,15 @@
+/bootstrap/cache
 /node_modules
-/public/hot
 /public/storage
 /storage/*.key
 /vendor
-.env
-.env.backup
-.phpunit.result.cache
+/.idea
+/.vscode
+/nbproject
+/.vagrant
 Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
+.env
+.phpunit.result.cache
