--- a/composer.json
+++ b/composer.json
@@ -8,20 +8,18 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.2.5",
-        "fideloper/proxy": "^4.2",
-        "fruitcake/laravel-cors": "^1.0",
-        "guzzlehttp/guzzle": "^6.3",
-        "laravel/framework": "^7.0",
+        "php": "^7.3.0",
+        "fideloper/proxy": "^4.3",
+        "laravel/framework": "7.12.*",
         "laravel/tinker": "^2.0",
-        "laravel/ui": "2.4",
-        "spatie/laravel-permission": "^5.5"
+        "laravel/ui": "^2.0",
+        "maatwebsite/excel": "^3.1",
+        "spatie/laravel-permission": "^3.13"
     },
     "require-dev": {
-        "barryvdh/laravel-debugbar": "^3.7",
-        "facade/ignition": "^2.0",
-        "fzaninotto/faker": "^1.9.1",
-        "mockery/mockery": "^1.3.1",
+        "filp/whoops": "^2.7",
+        "fzaninotto/faker": "^1.4",
+        "mockery/mockery": "^1.4",
         "nunomaduro/collision": "^4.1",
         "phpunit/phpunit": "^8.5"
     },
