--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
+        "fakerphp/faker": "^1.23",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^9.0",
         "laravel/tinker": "^2.0",
@@ -21,7 +22,6 @@
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.7",
         "spatie/laravel-ignition": "^1.0",
-        "fzaninotto/faker": "^1.9.1",
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^6.1",
         "phpunit/phpunit": "^9.0"
