--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "laravel/framework": "^9.0",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^3.0",
-        "maatwebsite/excel": "^3.1",
+        "phpoffice/phpspreadsheet": "3.8",
         "spatie/laravel-health": "^1.28",
         "spatie/laravel-permission": "^5.5",
         "spatie/security-advisories-health-check": "^1.2"
