--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^8.0.2",
         "barryvdh/laravel-snappy": "^1.0",
         "fakerphp/faker": "^1.23",
+        "firebase/php-jwt": "^6.11",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^9.0",
         "laravel/tinker": "^2.0",
